# ai-chatbot

./: .gitignore  README.md  package-lock.json  run.py  setup.py  start_backend.bat
backend/: database.py  main.py  pyproject.toml  rag.py  requirements.txt
config/: .env.example
frontend/: package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx
scripts/: deploy_vercel.py  init_turso.py  setup.py  setup_github.py
